Spill Fix

--- a/The Multimedia Terminal/WebContent/tmi.css
+++ b/The Multimedia Terminal/WebContent/tmi.css
@@ -417,6 +417,7 @@ div.review {
 
 div.workSmall {
 	font-size:0.8em;
+	min-height:115px;
 	padding:5px;
 	padding-bottom:1px;
 	background-color:#404040;
